Upgrade to RxJava 3